feat: Refactor AdminGateway